# AuditFlow-Pro

./: .gitignore  .sonarignore  AWS_COST_OPTIMIZATION_GUIDE.md  ENCODING_FIX_INSTRUCTIONS.md  ENCODING_FIX_SUMMARY.md  README.md  SONARQUBE_QUICKSTART.md  SONARQUBE_SETUP.md  amplify.yml  count_aideas.py  design.md  fix_encoding.py  requirements.md  sonar-project.properties  verify_encoding.sh
auditflow-pro/: .env  (+124 more)
auditflow-pro/backend/: DEPLOYMENT_GUIDE.md  DYNAMODB_SAVE_FIX.md  FIELD_LEVEL_ENCRYPTION.md  FINAL_FIXES_SUMMARY.md  IAM_PERMISSION_FIX.md  LAMBDA_DEPLOYMENT_FIX.md  MAP_STATE_FIX.md  QUICK_DEPLOY.md  STEP_FUNCTION_FIX.md  build_lambda_packages.sh  clean_applicant_names.py  fix_applicant_names.py  pyproject.toml  requirements.txt  setup.sh
auditflow-pro/backend/config/: secure_config.py
auditflow-pro/backend/functions/api_handler/: README.md  app.py
auditflow-pro/backend/functions/auth_logger/: app.py
auditflow-pro/backend/functions/classifier/: app.py
auditflow-pro/backend/shared/: __init__.py  dynamodb_schemas.py  encryption.py  models.py  repositories.py  storage.py
auditflow-pro/backend/step_functions/: README.md  state_machine.asl.json
auditflow-pro/backend/tests/: requirements.txt  test_auth_logger.py  test_classifier.py  test_dob_ssn_validation.py  test_encryption.py  test_extractor.py  test_golden_record_integration.py  test_income_validation.py  test_models.py  test_property_examples.py  test_reporter.py  test_repositories.py  test_risk_scorer.py  test_security.py  test_storage.py  test_trigger.py  test_validation.py  test_validator.py
(+253 files in other folders)
