[tool.poetry]
name = "auditflow-pro-backend"
version = "1.0.0"
description = "AI-Powered Loan Document Auditor - Backend Services"
authors = ["AuditFlow Team"]
readme = "README.md"
packages = [{include = "functions"}, {include = "shared"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.37.38"
botocore = "1.37.38"
certifi = "2026.1.4"
cffi = ">=2.0.0"
charset-normalizer = "3.4.4"
cryptography = ">=43.0.0"
exceptiongroup = "1.3.1"
hypothesis = "6.113.0"
idna = "3.11"
iniconfig = "2.1.0"
Jinja2 = "3.1.6"
jmespath = "1.0.1"
MarkupSafe = "2.1.5"
moto = "5.0.28"
packaging = "26.0"
pluggy = "1.5.0"
pycparser = "2.23"
pytest = "8.3.5"
python-dateutil = "2.9.0.post0"
PyYAML = "6.0.3"
requests = "2.32.4"
responses = "0.26.0"
s3transfer = "0.11.5"
six = "1.17.0"
tomli = "2.4.0"
typing_extensions = "4.13.2"
urllib3 = "1.26.18"
Werkzeug = ">=3.0.7"
xmltodict = "0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-cov = "^7.1.0"
pylint = "^3.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
